services/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: linuxserver/calibre-web:0.6.26
        ports:
        - containerPort: 8083
        volumeMounts:
        - mountPath: /config
          name: calibre-web-config
        - mountPath: /books
          name: calibre-web-books-nfs
      volumes:
      - name: calibre-web-config
        persistentVolumeClaim:
          claimName:  calibre-web-config-claim
      - name: calibre-web-books-nfs
        nfs:
          server: 192.168.50.50
          path: /volume1/NAS/Calibre/Rawiri
          readOnly: true
