services/calibre-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: services
spec:
  selector:
    app: calibre-web
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
