services/calibre-web/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre-web.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: calibre-web
          port: 8083
  tls:
    secretName: test-local-hohepa-dev-tls
