services/calibre-web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://calibre-web.local.hohepa.dev
    gethomepage.dev/group: Services
    gethomepage.dev/name: Calibre Web
    gethomepage.dev/icon: calibre-web.png
    gethomepage.dev/app: calibre-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`calibre-web.local.hohepa.dev`)
      kind: Rule
      services:
        - name: calibre-web
          port: 8083
  tls:
    secretName: local-hohepa-dev-tls
